# business_management

./: .env.example  .gitattributes  Dockerfile  README.md  create_superuser.py  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh  init-db.sh
migrations/: env.py
migrations/versions/: 16f83fdf81b9_edited_user_model.py  3c0a9e728c88_fix_team_id_and_assignee_id_in_tasks_.py  401851a322a8_fix_score_enum_fixed_to_represent_int_.py  79b5d8a2f07b_added_name_fields_to_users_table.py  8d0b1d3099d2_feat_added_created_at_field_to_.py  a1d425c07d51_fix_task_id_at_task_comment_now_cascade_.py  d2b94dcef4fe_fix_made_user_email_unique.py  d83211af971f_initial_tables.py  e7b74d06e2e3_fix_cascade_added_to_evaluations_task_id.py
src/: main.py
src/admin/: base.py  evaluation.py  meeting.py  task.py  team.py  user.py  views.py
src/api/: deps.py
src/auth/: auth.py  config.py  manager.py
src/core/: cache_config.py  config.py  lisespan.py  logging_config.py
src/db/: init_db.py  session.py
src/dependencies/: deps.py
src/frontend/: __init__.py  auth.py  calendar.py  config.py  evaluations.py  frontend_routes.py  index.py  meetings.py  profile.py  root.py  tasks.py
src/middleware/: auth_context.py
src/models/: __init__.py  evaluation.py  meeting.py  task.py  team.py  user.py
src/schemas/: calendar.py  comment.py  evaluation.py  meeting.py  task.py  team.py  user.py
src/services/: calendar_service.py  evaluation_service.py  meeting_service.py  task_service.py  team_service.py  user_service.py
src/static/: all_tasks.html  auth.html  (+8 more)
tests/: conftest.py
(+25 files in other folders)
